hphp/test/zend7/Zend/tests/bug49866.php.expectf

Fatal error: %s
Stack trace:
#0 {main}
  thrown in %sbug49866.php on line 3